# TaxiVis

./: LICENSE  README.md
data/: data_years.txt  extra_fields.txt  manhattan_with_weights.txt  neighborhoods.txt  neighborhoodsGeometry.txt  sample_merged_1.kdtrip  zipcodes.txt
data/rawData/: sample_merged_1.csv  sample_trip_data_1.csv  sample_trip_fare_1.csv
doc/: data_import.tex
src/TaxiVis/: CMakeLists.txt  CityMap.hpp  Group.cpp  Group.h  GroupRepository.cpp  GroupRepository.h  HistogramDialog.cpp  HistogramDialog.hpp  HistogramDialog.ui  KdTrip.hpp  QMapView.cpp  QMapView.hpp  QMapWidget.cpp  QMapWidget.hpp  RenderingLayer.cpp  RenderingLayer.hpp  Selection.cpp  Selection.h  SelectionGraph.cpp  SelectionGraph.h  TaxiVis.pro  TemporalSeriesDialog.cpp  TemporalSeriesDialog.hpp  TemporalSeriesDialog.ui  TimeExplorationDialog.cpp  TimeExplorationDialog.hpp  TimeExplorationDialog.ui  UsefulGeometryFunctions.h  coordinator.cpp  coordinator.h  extendedhistogram.cpp  extendedhistogram.h  extendedplotwidget.cpp  extendedplotwidget.h  geographicalviewwidget.cpp  geographicalviewwidget.h  global.cpp  global.h  histogramwidget.cpp  histogramwidget.h  (+32 more)
src/TaxiVis/Resources/: qualitative.colors
src/TaxiVis/Resources/shaders/: geo2screen.120.vert  location.120.vert  paths.120.frag  paths.120.geom  paths.120.vert
src/TaxiVis/layers/: GridMap.cpp  GridMap.hpp  HeatMap.cpp  HeatMap.hpp  Triangulator.cpp  Triangulator.hpp  TripAnimation.cpp  TripAnimation.hpp  TripAnimationConfig.ui  TripAnimationToolBar.ui  TripLocation.cpp  TripLocation.hpp  TripLocationLOD.cpp  TripLocationLOD.hpp
src/TaxiVis/util/: bluetocyanscale.cpp  bluetocyanscale.h  bluetoyellowscale.cpp  bluetoyellowscale.h  colorbar.cpp  colorbar.h  colorscale.cpp  colorscale.h  divergent.cpp  divergent.h  grayscale.cpp  grayscale.h  greentowhitescale.cpp  greentowhitescale.h  heatedobjectscale.cpp  heatedobjectscale.h  lineargrayscale.cpp  lineargrayscale.h  locsscale.cpp  locsscale.h  pseudorainbowscale.cpp  pseudorainbowscale.h  rainbowscale.cpp  rainbowscale.h  scalar.cpp  scalar.h  sequentialred.cpp  sequentialred.h  yellowtobrownscale.cpp  yellowtobrownscale.h
src/preprocess/: CMakeLists.txt  build_kdtrip.cpp  csv2Binary.cpp  merge.py  multiCsv2Binary.cpp  newFormatCsv2Binary.cpp  radix.h  sampling.cpp  testQuery.cpp  unif96_to_bin.cpp
